--- a/Tickt/nbproject/project.properties
+++ b/Tickt/nbproject/project.properties
@@ -28,18 +28,20 @@ dist.jar=${dist.dir}/Tickt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.gson-2.8.5.jar=gson-2.8.5.jar
+file.reference.hamcrest-all-1.3.jar=hamcrest-all-1.3.jar
 file.reference.jcalendar-1.4.zip=C:\\Users\\holo7\\Desktop\\jcalendar-1.4.zip
+file.reference.junit-4.11.jar=junit-4.11.jar
 file.reference.mongo-java-driver-3.9.1.jar=mongo-java-driver-3.9.1.jar
-file.reference.mongodb-driver-sync-3.9.1-javadoc.jar=mongodb-driver-sync-3.9.1-javadoc.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.eclipselink.classpath}:\
     ${file.reference.jcalendar-1.4.zip}:\
-    ${file.reference.mongodb-driver-sync-3.9.1-javadoc.jar}:\
     ${file.reference.mongo-java-driver-3.9.1.jar}:\
-    ${file.reference.gson-2.8.5.jar}
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.hamcrest-all-1.3.jar}:\
+    ${file.reference.junit-4.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
