--- a/Tickt/nbproject/project.properties
+++ b/Tickt/nbproject/project.properties
@@ -27,11 +27,20 @@ dist.dir=dist
 dist.jar=${dist.dir}/Tickt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-logging-1.2.jar=commons-logging-1.2.jar
 file.reference.gson-2.8.5.jar=gson-2.8.5.jar
 file.reference.hamcrest-all-1.3.jar=hamcrest-all-1.3.jar
+file.reference.httpasyncclient-4.0.2.jar=httpasyncclient-4.0.2.jar
+file.reference.httpclient-4.3.6.jar=httpclient-4.3.6.jar
+file.reference.httpcore-4.4.10.jar=httpcore-4.4.10.jar
+file.reference.httpcore-nio-4.4.10.jar=httpcore-nio-4.4.10.jar
+file.reference.httpmime-4.3.6.jar=httpmime-4.3.6.jar
 file.reference.jcalendar-1.4.zip=C:\\Users\\holo7\\Desktop\\jcalendar-1.4.zip
+file.reference.junit-4.11-javadoc.jar=junit-4.11-javadoc.jar
 file.reference.junit-4.11.jar=junit-4.11.jar
 file.reference.mongo-java-driver-3.9.1.jar=mongo-java-driver-3.9.1.jar
+file.reference.org.json.jar=org.json.jar
+file.reference.unirest-java-1.4.9.jar=unirest-java-1.4.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,7 +50,16 @@ javac.classpath=\
     ${file.reference.mongo-java-driver-3.9.1.jar}:\
     ${file.reference.gson-2.8.5.jar}:\
     ${file.reference.hamcrest-all-1.3.jar}:\
-    ${file.reference.junit-4.11.jar}
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.httpasyncclient-4.0.2.jar}:\
+    ${file.reference.httpclient-4.3.6.jar}:\
+    ${file.reference.httpcore-4.4.10.jar}:\
+    ${file.reference.httpcore-nio-4.4.10.jar}:\
+    ${file.reference.httpmime-4.3.6.jar}:\
+    ${file.reference.junit-4.11-javadoc.jar}:\
+    ${file.reference.org.json.jar}:\
+    ${file.reference.unirest-java-1.4.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
